--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
-                <div id='home-score'>0</div>
-                <div id='add=points'>
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                <div class='score' id="home-score">0</div>
+                <div id="home-buttons">
+                    <button data-value=1>+1</button>
+                    <button data-value=2>+2</button>
+                    <button data-value=3>+3</button>
                 </div>
             </div>
             <div>
                 <h3>GUEST</h3>
-                <div id='home-score'>0</div>
-                 <div id='add=points'>
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                <div class='score' id="guest-score">0</div>
+                 <div id='guest-buttons'>
+                    <button data-value=1>+1</button>
+                    <button data-value=2>+2</button>
+                    <button data-value=3>+3</button>
                 </div>
             </div>
         </div>
